--- a/profile.html
+++ b/profile.html
@@ -112,11 +112,11 @@
         <div class="profile-page m-20">
           <div class="overview bg-white rad-10 d-flex align-center">
             <div class="avatar-box txt-c p-20">
-              <img class="mb-10 rad-half" src="imgs/avatar.png" alt="image">
+              <img class="mb-10 rad-half" src="imgs/avatar.png" alt="image" />
               <h3 class="m-0">Billal Benz</h3>
               <p class="c-grey mt-10">Level 20</p>
               <div class="level rad-6 bg-eee p-relative">
-                <span style="width: 70%;"></span>
+                <span style="width: 70%"></span>
               </div>
               <div class="rating mt-10 mb-10">
                 <i class="fa-solid fa-star c-orange fs-13"></i>
@@ -127,7 +127,101 @@
               </div>
               <p class="c-grey m-0 fs-13">450 Rating</p>
             </div>
-            <div class="info-box"></div>
+            <div class="info-box">
+              <!-- Start Information Row -->
+              <div class="box p-20 d-flex align-center">
+                <h4 class="c-grey fs-15 m-0 w-full">General Information</h4>
+                <div class="fs-14">
+                  <span class="c-grey">Full Name</span>
+                  <span>Billal Benzazoua</span>
+                </div>
+                <div class="fs-14">
+                  <span class="c-grey">Gender:</span>
+                  <span>Male</span>
+                </div>
+                <div class="fs-14">
+                  <span class="c-grey">Country:</span>
+                  <span>Algeria</span>
+                </div>
+                <div class="fs-14">
+                  <label>
+                    <input class="toggle-checkbox" type="checkbox" checked>
+                    <div class="toggle-switch"></div>
+                  </label>
+                </div>
+              </div>
+              <!-- End Information Row -->
+              <!-- Start Information Row -->
+              <div class="box p-20 d-flex align-center">
+                <h4 class="c-grey fs-15 m-0 w-full">Personal Information</h4>
+                <div class="fs-14">
+                  <span class="c-grey">Email</span>
+                  <span>o@nn.sa</span>
+                </div>
+                <div class="fs-14">
+                  <span class="c-grey">Phone:</span>
+                  <span>09238479823</span>
+                </div>
+                <div class="fs-14">
+                  <span class="c-grey">Date Of Birth:</span>
+                  <span>01/09/2001</span>
+                </div>
+                <div class="fs-14">
+                  <label>
+                    <input class="toggle-checkbox" type="checkbox" checked>
+                    <div class="toggle-switch"></div>
+                  </label>
+                </div>
+              </div>
+              <!-- End Information Row -->
+              <!-- Start Information Row -->
+              <div class="box p-20 d-flex align-center">
+                <h4 class="c-grey fs-15 m-0 w-full">Job Information</h4>
+                <div class="fs-14">
+                  <span class="c-grey">Title</span>
+                  <span>Full Stack Developer</span>
+                </div>
+                <div class="fs-14">
+                  <span class="c-grey">Programming Language:</span>
+                  <span>C#</span>
+                </div>
+                <div class="fs-14">
+                  <span class="c-grey">Years Of Experience:</span>
+                  <span>2+</span>
+                </div>
+                <div class="fs-14">
+                  <label>
+                    <input class="toggle-checkbox" type="checkbox" checked>
+                    <div class="toggle-switch"></div>
+                  </label>
+                </div>
+
+              </div>
+              <!-- End Information Row -->
+              <!-- Start Information Row -->
+              <div class="box p-20 d-flex align-center">
+                <h4 class="c-grey fs-15 m-0 w-full">Billing Information</h4>
+                <div class="fs-14">
+                  <span class="c-grey">Payment Method</span>
+                  <span>Paypal</span>
+                </div>
+                <div class="fs-14">
+                  <span class="c-grey">Email:</span>
+                  <span>email@website.com</span>
+                </div>
+                <div class="fs-14">
+                  <span class="c-grey">Subscription:</span>
+                  <span>Monthly</span>
+                </div>
+                <div class="fs-14">
+                  <label>
+                    <input class="toggle-checkbox" type="checkbox" checked>
+                    <div class="toggle-switch"></div>
+                  </label>
+                </div>
+              </div>
+              <!-- End Information Row -->
+            </div>
           </div>
         </div>
       </div>
