Profile Page - Skills And Activities

--- a/profile.html
+++ b/profile.html
@@ -110,6 +110,7 @@
         <!-- End Head -->
         <h1 class="p-relative">Profile</h1>
         <div class="profile-page m-20">
+          <!-- Start Overview -->
           <div class="overview bg-white rad-10 d-flex align-center">
             <div class="avatar-box txt-c p-20">
               <img class="mb-10 rad-half" src="imgs/avatar.png" alt="image" />
@@ -127,7 +128,7 @@
               </div>
               <p class="c-grey m-0 fs-13">450 Rating</p>
             </div>
-            <div class="info-box">
+            <div class="info-box w-full txt-c-mobile">
               <!-- Start Information Row -->
               <div class="box p-20 d-flex align-center">
                 <h4 class="c-grey fs-15 m-0 w-full">General Information</h4>
@@ -145,7 +146,7 @@
                 </div>
                 <div class="fs-14">
                   <label>
-                    <input class="toggle-checkbox" type="checkbox" checked>
+                    <input class="toggle-checkbox" type="checkbox" checked />
                     <div class="toggle-switch"></div>
                   </label>
                 </div>
@@ -168,7 +169,7 @@
                 </div>
                 <div class="fs-14">
                   <label>
-                    <input class="toggle-checkbox" type="checkbox" checked>
+                    <input class="toggle-checkbox" type="checkbox" checked />
                     <div class="toggle-switch"></div>
                   </label>
                 </div>
@@ -191,11 +192,10 @@
                 </div>
                 <div class="fs-14">
                   <label>
-                    <input class="toggle-checkbox" type="checkbox" checked>
+                    <input class="toggle-checkbox" type="checkbox" checked />
                     <div class="toggle-switch"></div>
                   </label>
                 </div>
-
               </div>
               <!-- End Information Row -->
               <!-- Start Information Row -->
@@ -215,7 +215,7 @@
                 </div>
                 <div class="fs-14">
                   <label>
-                    <input class="toggle-checkbox" type="checkbox" checked>
+                    <input class="toggle-checkbox" type="checkbox" checked />
                     <div class="toggle-switch"></div>
                   </label>
                 </div>
@@ -223,6 +223,74 @@
               <!-- End Information Row -->
             </div>
           </div>
+          <!-- End Overview -->
+          <!-- Start Other Data -->
+          <div class="other-data d-flex gap-20">
+            <div class="skills-card p-20 bg-white rad-10 mt-20">
+              <h2 class="mt-0 mb-10">My Skills</h2>
+              <p class="mt-0 mb-20 c-grey fs-15">Complete Skills List</p>
+              <ul class="m-0 txt-c-mobile">
+                <li><span>HTML</span><span>Pugjs</span><span>HAML</span></li>
+                <li><span>CSS</span><span>SASS</span><span>Stylus</span></li>
+                <li><span>Javascript</span><span>Typescript</span></li>
+                <li><span>Vuejs</span><span>Reactjs</span></li>
+                <li><span>Jest</span><span>Jasmine</span></li>
+                <li><span>C#</span><span>.NET</span></li>
+                <li><span>Python</span><span>Django</span></li>
+              </ul>
+            </div>
+            <div class="activities p-20 bg-white rad-10 mt-20">
+              <h2 class="mt-0 mb-10">Latest Activities</h2>
+              <p class="mt-0 mb-20 c-grey fs-15">
+                Latest Activities Done By The User
+              </p>
+              <div class="activity d-flex align-center txt-c-mobile">
+                <img src="imgs/activity-01.png" alt="image">
+                <div class="info">
+                  <span class="d-block mb-10">Store</span>
+                  <span class="c-grey ">Bought The Mastering Python Course</span>
+                </div>
+                <div class="date">
+                  <span class="d-block mb-10">18:50</span>
+                  <span class="c-grey">Yesterday</span>
+                </div>
+              </div>
+              <div class="activity d-flex align-center txt-c-mobile">
+                <img src="imgs/activity-02.png" alt="image">
+                <div class="info">
+                  <span class="d-block mb-10">Academy</span>
+                  <span class="c-grey ">Got The PHP Certificate</span>
+                </div>
+                <div class="date">
+                  <span class="d-block mb-10">17:10</span>
+                  <span class="c-grey">Yesterday</span>
+                </div>
+              </div>
+              <div class="activity d-flex align-center txt-c-mobile">
+                <img src="imgs/activity-03.png" alt="image">
+                <div class="info">
+                  <span class="d-block mb-10">Badges</span>
+                  <span class="c-grey ">Unlocked The 10 Skills Badge</span>
+                </div>
+                <div class="date">
+                  <span class="d-block mb-10">15:40</span>
+                  <span class="c-grey">Yesterday</span>
+                </div>
+              </div>
+              <div class="activity d-flex align-center txt-c-mobile">
+                <img src="imgs/activity-01.png" alt="image">
+                <div class="info">
+                  <span class="d-block mb-10">Store</span>
+                  <span class="c-grey ">Bought The Mastering Python Course</span>
+                </div>
+                <div class="date">
+                  <span class="d-block mb-10">13:30</span>
+                  <span class="c-grey">Yesterday</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- End Other Data -->
         </div>
       </div>
     </div>
