Files Page - File Card

--- a/files.html
+++ b/files.html
@@ -160,6 +160,224 @@
               Upload</a
             >
           </div>
+          <div class="files-content d-grid gap-20">
+            <div class="file bg-white p-10 rad-10">
+              <i class="fa-solid fa-download c-grey p-absolute"></i>
+              <div class="icon txt-c">
+                <img class="mt-15 mb-15" src="imgs/pdf.svg" alt="image">
+              </div>
+              <div class="txt-c mb-10 fs-14">my-file.pdf</div>
+              <p class="c-grey fs-13">Billal</p>
+              <div class="info between-flex mt-10 pt-10 fs-13 c-grey">
+                <span>20/6/2023</span>
+                <span>5.5MB</span>
+              </div>
+            </div>
+            <div class="file bg-white p-10 rad-10">
+              <i class="fa-solid fa-download c-grey p-absolute"></i>
+              <div class="icon txt-c">
+                <img class="mt-15 mb-15" src="imgs/avi.svg" alt="image">
+              </div>
+              <div class="txt-c mb-10 fs-14">my-file.avi</div>
+              <p class="c-grey fs-13">Admin</p>
+              <div class="info between-flex mt-10 pt-10 fs-13 c-grey">
+                <span>22/7/2023</span>
+                <span>12.5MB</span>
+              </div>
+            </div>
+            <div class="file bg-white p-10 rad-10">
+              <i class="fa-solid fa-download c-grey p-absolute"></i>
+              <div class="icon txt-c">
+                <img class="mt-15 mb-15" src="imgs/eps.svg" alt="image">
+              </div>
+              <div class="txt-c mb-10 fs-14">my-file.eps</div>
+              <p class="c-grey fs-13">Uploader</p>
+              <div class="info between-flex mt-10 pt-10 fs-13 c-grey">
+                <span>1/8/2023</span>
+                <span>2.7MB</span>
+              </div>
+            </div>
+            <div class="file bg-white p-10 rad-10">
+              <i class="fa-solid fa-download c-grey p-absolute"></i>
+              <div class="icon txt-c">
+                <img class="mt-15 mb-15" src="imgs/psd.svg" alt="image">
+              </div>
+              <div class="txt-c mb-10 fs-14">my-file.psd</div>
+              <p class="c-grey fs-13">Osama</p>
+              <div class="info between-flex mt-10 pt-10 fs-13 c-grey">
+                <span>5/8/2023</span>
+                <span>15.1MB</span>
+              </div>
+            </div>
+            <div class="file bg-white p-10 rad-10">
+              <i class="fa-solid fa-download c-grey p-absolute"></i>
+              <div class="icon txt-c">
+                <img class="mt-15 mb-15" src="imgs/dll.svg" alt="image">
+              </div>
+              <div class="txt-c mb-10 fs-14">my-file.dll</div>
+              <p class="c-grey fs-13">Coder</p>
+              <div class="info between-flex mt-10 pt-10 fs-13 c-grey">
+                <span>9/8/2023</span>
+                <span>3.2MB</span>
+              </div>
+            </div>
+            <div class="file bg-white p-10 rad-10">
+              <i class="fa-solid fa-download c-grey p-absolute"></i>
+              <div class="icon txt-c">
+                <img class="mt-15 mb-15" src="imgs/png.svg" alt="image">
+              </div>
+              <div class="txt-c mb-10 fs-14">my-file.png</div>
+              <p class="c-grey fs-13">Designer</p>
+              <div class="info between-flex mt-10 pt-10 fs-13 c-grey">
+                <span>16/9/2023</span>
+                <span>1.1MB</span>
+              </div>
+            </div>
+            <div class="file bg-white p-10 rad-10">
+              <i class="fa-solid fa-download c-grey p-absolute"></i>
+              <div class="icon txt-c">
+                <img class="mt-15 mb-15" src="imgs/pdf.svg" alt="image">
+              </div>
+              <div class="txt-c mb-10 fs-14">my-file.pdf</div>
+              <p class="c-grey fs-13">Billal</p>
+              <div class="info between-flex mt-10 pt-10 fs-13 c-grey">
+                <span>20/6/2023</span>
+                <span>5.5MB</span>
+              </div>
+            </div>
+            <div class="file bg-white p-10 rad-10">
+              <i class="fa-solid fa-download c-grey p-absolute"></i>
+              <div class="icon txt-c">
+                <img class="mt-15 mb-15" src="imgs/avi.svg" alt="image">
+              </div>
+              <div class="txt-c mb-10 fs-14">my-file.avi</div>
+              <p class="c-grey fs-13">Admin</p>
+              <div class="info between-flex mt-10 pt-10 fs-13 c-grey">
+                <span>22/7/2023</span>
+                <span>12.5MB</span>
+              </div>
+            </div>
+            <div class="file bg-white p-10 rad-10">
+              <i class="fa-solid fa-download c-grey p-absolute"></i>
+              <div class="icon txt-c">
+                <img class="mt-15 mb-15" src="imgs/eps.svg" alt="image">
+              </div>
+              <div class="txt-c mb-10 fs-14">my-file.eps</div>
+              <p class="c-grey fs-13">Uploader</p>
+              <div class="info between-flex mt-10 pt-10 fs-13 c-grey">
+                <span>1/8/2023</span>
+                <span>2.7MB</span>
+              </div>
+            </div>
+            <div class="file bg-white p-10 rad-10">
+              <i class="fa-solid fa-download c-grey p-absolute"></i>
+              <div class="icon txt-c">
+                <img class="mt-15 mb-15" src="imgs/psd.svg" alt="image">
+              </div>
+              <div class="txt-c mb-10 fs-14">my-file.psd</div>
+              <p class="c-grey fs-13">Osama</p>
+              <div class="info between-flex mt-10 pt-10 fs-13 c-grey">
+                <span>5/8/2023</span>
+                <span>15.1MB</span>
+              </div>
+            </div>
+            <div class="file bg-white p-10 rad-10">
+              <i class="fa-solid fa-download c-grey p-absolute"></i>
+              <div class="icon txt-c">
+                <img class="mt-15 mb-15" src="imgs/dll.svg" alt="image">
+              </div>
+              <div class="txt-c mb-10 fs-14">my-file.dll</div>
+              <p class="c-grey fs-13">Coder</p>
+              <div class="info between-flex mt-10 pt-10 fs-13 c-grey">
+                <span>9/8/2023</span>
+                <span>3.2MB</span>
+              </div>
+            </div>
+            <div class="file bg-white p-10 rad-10">
+              <i class="fa-solid fa-download c-grey p-absolute"></i>
+              <div class="icon txt-c">
+                <img class="mt-15 mb-15" src="imgs/png.svg" alt="image">
+              </div>
+              <div class="txt-c mb-10 fs-14">my-file.png</div>
+              <p class="c-grey fs-13">Designer</p>
+              <div class="info between-flex mt-10 pt-10 fs-13 c-grey">
+                <span>16/9/2023</span>
+                <span>1.1MB</span>
+              </div>
+            </div>
+            <div class="file bg-white p-10 rad-10">
+              <i class="fa-solid fa-download c-grey p-absolute"></i>
+              <div class="icon txt-c">
+                <img class="mt-15 mb-15" src="imgs/pdf.svg" alt="image">
+              </div>
+              <div class="txt-c mb-10 fs-14">my-file.pdf</div>
+              <p class="c-grey fs-13">Billal</p>
+              <div class="info between-flex mt-10 pt-10 fs-13 c-grey">
+                <span>20/6/2023</span>
+                <span>5.5MB</span>
+              </div>
+            </div>
+            <div class="file bg-white p-10 rad-10">
+              <i class="fa-solid fa-download c-grey p-absolute"></i>
+              <div class="icon txt-c">
+                <img class="mt-15 mb-15" src="imgs/avi.svg" alt="image">
+              </div>
+              <div class="txt-c mb-10 fs-14">my-file.avi</div>
+              <p class="c-grey fs-13">Admin</p>
+              <div class="info between-flex mt-10 pt-10 fs-13 c-grey">
+                <span>22/7/2023</span>
+                <span>12.5MB</span>
+              </div>
+            </div>
+            <div class="file bg-white p-10 rad-10">
+              <i class="fa-solid fa-download c-grey p-absolute"></i>
+              <div class="icon txt-c">
+                <img class="mt-15 mb-15" src="imgs/eps.svg" alt="image">
+              </div>
+              <div class="txt-c mb-10 fs-14">my-file.eps</div>
+              <p class="c-grey fs-13">Uploader</p>
+              <div class="info between-flex mt-10 pt-10 fs-13 c-grey">
+                <span>1/8/2023</span>
+                <span>2.7MB</span>
+              </div>
+            </div>
+            <div class="file bg-white p-10 rad-10">
+              <i class="fa-solid fa-download c-grey p-absolute"></i>
+              <div class="icon txt-c">
+                <img class="mt-15 mb-15" src="imgs/psd.svg" alt="image">
+              </div>
+              <div class="txt-c mb-10 fs-14">my-file.psd</div>
+              <p class="c-grey fs-13">Osama</p>
+              <div class="info between-flex mt-10 pt-10 fs-13 c-grey">
+                <span>5/8/2023</span>
+                <span>15.1MB</span>
+              </div>
+            </div>
+            <div class="file bg-white p-10 rad-10">
+              <i class="fa-solid fa-download c-grey p-absolute"></i>
+              <div class="icon txt-c">
+                <img class="mt-15 mb-15" src="imgs/dll.svg" alt="image">
+              </div>
+              <div class="txt-c mb-10 fs-14">my-file.dll</div>
+              <p class="c-grey fs-13">Coder</p>
+              <div class="info between-flex mt-10 pt-10 fs-13 c-grey">
+                <span>9/8/2023</span>
+                <span>3.2MB</span>
+              </div>
+            </div>
+            <div class="file bg-white p-10 rad-10">
+              <i class="fa-solid fa-download c-grey p-absolute"></i>
+              <div class="icon txt-c">
+                <img class="mt-15 mb-15" src="imgs/png.svg" alt="image">
+              </div>
+              <div class="txt-c mb-10 fs-14">my-file.png</div>
+              <p class="c-grey fs-13">Designer</p>
+              <div class="info between-flex mt-10 pt-10 fs-13 c-grey">
+                <span>16/9/2023</span>
+                <span>1.1MB</span>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
